--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -150,9 +150,9 @@ spec:
                  - noatime
                  - nodiratime
                  - nolock
-            backup:
-                enabled: true
-                mountPath: /config/Backups
+#            backup:
+#                enabled: true
+#                mountPath: /config/Backups
 #                volsync:
 #                - name: config
 #                  type: restic
