--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
             s3:
               type: s3
               url: "${S3URL}"
-              bucket: "${S3PREFIX}-homepage"
+              bucket: "${S3PREFIX}-dizquetv"
               accessKey: "${S3ID}"
               secretKey: "${S3KEY}"
               encrKey: "${S3KEY}"
