--- a/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
@@ -25,18 +25,33 @@ spec:
                 accessKey: "${S3ID}"
                 secretKey: "${S3KEY}"
                 encrKey: "${S3KEY}"
-        TZ: America/Los_Angeles
-        addons:
-            codeserver:
+        securityContext:
+            container:
+                UMASK: "0022"
+                readOnlyRootFilesystem: false
+                runAsGroup: 1000
+                runAsUser: 1000
+            pod:
+                fsGroup: 1000
+                fsGroupChangePolicy: OnRootMismatch
+        metrics:
+            main:
                 enabled: false
-            netshoot:
-                enabled: false
-            vpn:
-                type: disabled
-        exportarrImage:
-            pullPolicy: IfNotPresent
-            repository: ghcr.io/onedr0p/exportarr
-            tag: v2.0.1@sha256:727e7bc8f2f0934a2117978c59f4476b954018b849a010ea6cfb380bd6539644
+                endpoints:
+                    - path: /metrics
+                      port: metrics
+                prometheusRule:
+                    enabled: false
+                targetSelector: metrics
+                type: servicemonitor
+        service:
+            main:
+                enabled: true
+                loadBalancerIP: ${LIDARR_IP}
+                ports:
+                    main:
+                        port: 8686
+                type: LoadBalancer
         ingress:
             main:
                 enabled: true
@@ -65,18 +80,7 @@ spec:
                     - host: "lidarr.${BASE_DOMAIN}"
                       paths:
                         - path: /
-                          pathType: Prefix
-
-        metrics:
-            main:
-                enabled: false
-                endpoints:
-                    - path: /metrics
-                      port: metrics
-                prometheusRule:
-                    enabled: false
-                targetSelector: metrics
-                type: servicemonitor
+                          pathType: Prefix                
         persistence:
             config:
                 enabled: true
@@ -91,12 +95,12 @@ spec:
                         enabled: true
                       src:
                         enabled: true
-            data:
+            media:
                 enabled: true
                 type: nfs
                 path: /mnt/Pibbs-Horde/media/data
                 server: 192.168.10.123
-                mountPath: /data
+                mountPath: /media
                 mountOptions:
                  - nfsvers=4
                  - tcp
@@ -146,25 +150,7 @@ spec:
 #                      src:
 #                        enabled: true
 #                        cacheCapacity: 10Gi
-        release_name: lidarr
-        resources: {}
-        securityContext:
-            container:
-                UMASK: "0022"
-                readOnlyRootFilesystem: false
-                runAsGroup: 1000
-                runAsUser: 1000
-            pod:
-                fsGroup: 1000
-                fsGroupChangePolicy: OnRootMismatch
-        service:
-            main:
-                enabled: true
-                loadBalancerIP: ${LIDARR_IP}
-                ports:
-                    main:
-                        port: 8686
-                type: LoadBalancer
+
 
 
 
