--- a/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
@@ -115,12 +115,12 @@ spec:
           exportarr:
             mountPath: /config
             readOnly: true
-      data:
+      media:
         enabled: true
         type: nfs
         path: /mnt/Pibbs-Horde/media/data
         server: 192.168.10.123
-        mountPath: /data
+        mountPath: /media
         mountOptions:
          - nfsvers=4
          - tcp
