--- a/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
@@ -93,8 +93,10 @@ spec:
                       credentials: s3
                       dest:
                         enabled: true
+                        cacheCapacity: 100Gi
                       src:
                         enabled: true
+                        cacheCapacity: 100Gi
                     exportarr:
                       mountPath: /config
                       readOnly: true
