--- a/.github/renovate/basics/labels.json5
+++ b/.github/renovate/basics/labels.json5
@@ -22,7 +22,7 @@
       "labels": ["type/pin", "automerge"]
     },
     {
-      "matchUpdateTypes": ["lockFileMaintenance"],
+      "matchUpdateTypes": ["lockfile"],
       "labels": ["type/lockfile", "automerge"]
     },
     {
