--- a/.github/workflows/schedule-sync-labels.yaml
+++ b/.github/workflows/schedule-sync-labels.yaml
@@ -1,7 +1,6 @@
----
 name: "Schedule: Sync labels"
 
-on: # yamllint disable-line rule:truthy
+on:
   workflow_dispatch:
   schedule:
     - cron: "0 * * * *"
@@ -10,14 +9,22 @@ jobs:
   labels:
     name: Sync Labels
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v2
         with:
           token: "${GITHUB_TOKEN}"
 
+      - name: Set up Git config
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global credential.helper store
+          echo "https://${GITHUB_TOKEN}:x-oauth-basic@github.com" > ~/.git-credentials
+
       - name: Sync Labels
-        uses: EndBug/label-sync@52074158190acb45f3077f9099fea818aa43f97a # v2
+        uses: EndBug/label-sync@v2
         with:
           config-file: |
             https://raw.githubusercontent.com/truecharts/.github/main/.github/labels.yaml
