--- a/.github/workflows/schedule-sync-labels.yaml
+++ b/.github/workflows/schedule-sync-labels.yaml
@@ -11,17 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          token: "${GITHUB_TOKEN}"
-
-      - name: Set up Git config
+      - name: Set up Git for authentication
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global credential.helper store
           echo "https://${GITHUB_TOKEN}:x-oauth-basic@github.com" > ~/.git-credentials
+
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          token: "${GITHUB_TOKEN}"
+          fetch-depth: 0 
 
       - name: Sync Labels
         uses: EndBug/label-sync@v2
