--- a/.github/workflows/schedule-sync-labels.yaml
+++ b/.github/workflows/schedule-sync-labels.yaml
@@ -11,18 +11,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Git for authentication
+      - name: Set up SSH key for GitHub
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          repository: "git@github.com:zachbomb/clustertool-RC42.git"
+          token: "${GITHUB_TOKEN}"
+          fetch-depth: 0
+
+
+      - name: Set up Git for authentication (for label sync)
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global credential.helper store
           echo "https://"${GITHUB_TOKEN}":x-oauth-basic@github.com" > ~/.git-credentials
-
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          token: "${GITHUB_TOKEN}"
-          fetch-depth: 0 
 
       - name: Sync Labels
         uses: EndBug/label-sync@v2
