--- a/.github/workflows/schedule-sync-labels.yaml
+++ b/.github/workflows/schedule-sync-labels.yaml
@@ -24,6 +24,11 @@ jobs:
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+      - name: Debug environment variables
+        run: |
+          echo "GITHUB_TOKEN=$GITHUB_TOKEN"
+          echo "SSH_PRIVATE_KEY=$SSH_PRIVATE_KEY"
+          printenv
 
       # Checkout the repository using SSH
       - name: Checkout
