--- a/.github/workflows/schedule-sync-labels.yaml
+++ b/.github/workflows/schedule-sync-labels.yaml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Set up SSH key for GitHub (optional if switching to HTTPS)
+      # Set up SSH key for authentication
       - name: Set up SSH key for GitHub
         run: |
           mkdir -p ~/.ssh
@@ -24,8 +24,6 @@ jobs:
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        
-      # Debug environment variables (remove or leave as debug)
       - name: Debug environment variables
         run: |
           echo "GITHUB_TOKEN=$GITHUB_TOKEN"
@@ -38,16 +36,16 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global credential.helper store
-          echo "https://"${GITHUB_TOKEN}":x-oauth-basic@github.com" > ~/.git-credentials
+          echo "https://${GITHUB_TOKEN}:x-oauth-basic@github.com" > ~/.git-credentials
 
-      # Checkout the repository using HTTPS (instead of SSH)
+      # Checkout the repository using SSH
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: "zachbomb/clustertool-RC42"  # Use HTTPS format for GitHub
-          token: "${GITHUB_TOKEN}"  # Use the GitHub token for authentication
-          fetch-depth: 0  # Ensures we get the full history for label sync
-          ref: "main"  # Explicitly specify the branch to avoid default branch issues
+          repository: "git@github.com:zachbomb/clustertool-RC42.git"
+          token: "${GITHUB_TOKEN}"
+          fetch-depth: 0
+          ref: "main"
 
       # Sync Labels
       - name: Sync Labels
