--- a/.github/workflows/schedule-sync-labels.yaml
+++ b/.github/workflows/schedule-sync-labels.yaml
@@ -30,7 +30,7 @@ jobs:
         with:
           repository: "ssh://git@github.com:zachbomb/clustertool-RC42.git"
           fetch-depth: 0
-        #  ref: "main"
+          ref: "main"
 
       # Set up Git for authentication (for label sync)
       - name: Set up Git for authentication (for label sync)
