--- a/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
@@ -58,16 +58,15 @@ spec:
         persistence:
             config:
                 enabled: true
-                readOnly: false
-                main:
-                    volsync:
-                     - name: config
-                       type: restic
-                       credentials: s3
-                       dest:
-                         enabled: true
-                       src:
-                         enabled: true
+                mountPath: /config
+                volsync:
+                - name: config
+                  type: restic
+                  credentials: s3
+                  dest:
+                    enabled: true
+                  src:
+                    enabled: true
             media:
                 enabled: true
                 type: nfs
