--- a/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
             s3:
                 type: s3
                 url: "${S3URL}"
-                bucket: "${S3PREFIX}-radarr"
+                bucket: "${S3PREFIX}-lidarr"
                 accessKey: "${S3ID}"
                 secretKey: "${S3KEY}"
                 encrKey: "${S3KEY}"
