--- a/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
@@ -88,14 +88,14 @@ spec:
             config:
                 enabled: true
                 mountPath: /config
-                #volsync:
-                #- name: config
-                #  type: restic
-                #  credentials: s3
-                #  dest:
-                #    enabled: true
-                #  src:
-                #    enabled: true
+                volsync:
+                - name: config
+                  type: restic
+                  credentials: s3
+                  dest:
+                    enabled: true
+                  src:
+                    enabled: true
             media:
                 enabled: true
                 type: nfs
