--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -150,17 +150,17 @@ spec:
                  - noatime
                  - nodiratime
                  - nolock
-#            backup:
-#                enabled: true
-#                mountPath: /config/Backups
-#                volsync:
-#                - name: config
-#                  type: restic
-#                  credentials: s3
-#                  dest:
-#                    enabled: true
-#                  src:
-#                    enabled: true
+            backup:
+                enabled: true
+                mountPath: /config/Backups
+                volsync:
+                - name: config
+                  type: restic
+                  credentials: s3
+                  dest:
+                    enabled: true
+                  src:
+                    enabled: true
         plex:
             additionalAdvertiseURL: ""
             disableGDM: false
