--- a/clusters/main/kubernetes/apps/media/nzbget/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/nzbget/app/helm-release.yaml
@@ -142,14 +142,14 @@ spec:
             backup:
                 enabled: true
                 mountPath: /config/Backups
-                volsync:
-                - name: b2
-                  type: restic
-                  credentials: s3
-                  dest:
-                    enabled: true
-                  src:
-                    enabled: true
+            #    volsync:
+            #    - name: b2
+            #      type: restic
+            #      credentials: s3
+            #      dest:
+            #        enabled: true
+            #      src:
+            #        enabled: true
         release_name: nzbget
         resources: {}
         securityContext:
