--- a/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
@@ -138,17 +138,17 @@ spec:
                  - noatime
                  - nodiratime
                  - nolock
-            backup:
-                enabled: true
-                mountPath: /config/Backups
-                volsync:
-                - name: b2
-                  type: restic
-                  credentials: s3
-                  dest:
-                    enabled: true
-                  src:
-                    enabled: true
+            #backup:
+            #    enabled: true
+            #    mountPath: /config/Backups
+            #    volsync:
+            #    - name: b2
+            #      type: restic
+            #      credentials: s3
+            #      dest:
+            #        enabled: true
+            #      src:
+            #        enabled: true
 
 
 
