--- a/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
@@ -72,14 +72,14 @@ spec:
                 main:
                     enabled: true
                     mountPath: /config
-            #         volsync:
-            #        - name: config
-            #          type: restic
-            #          credentials: s3
-            #          dest:
-            #            enabled: true
-            #          src:
-            #            enabled: true
+                    volsync:
+                    - name: config
+                      type: restic
+                      credentials: s3
+                      dest:
+                        enabled: true
+                      src:
+                        enabled: true
             media:
                 enabled: true
                 type: nfs
