--- a/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
@@ -138,17 +138,15 @@ spec:
                  - nolock
             backup:
                 enabled: true
-                mountPath: /config/Backups
+                mountPath: /backups
 #                volsync:
 #                    - name: b2
 #                      type: restic
 #                      credentials: s3
 #                      dest:
-#                        cacheCapacity: 10Gi
 #                        enabled: true
 #                      src:
 #                        enabled: true
-#                        cacheCapacity: 10Gi
         securityContext:
             container:
                 UMASK: "022"
