--- a/clusters/main/kubernetes/apps/media/sabnzbd/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/sabnzbd/app/helm-release.yaml
@@ -159,9 +159,9 @@ spec:
                  - noatime
                  - nodiratime
                  - nolock
-            #backup:
-            #    enabled: true
-            #    mountPath: /config/Backups
+            backup:
+                enabled: true
+                mountPath: /backups
             #    volsync:
             #    - name: b2
             #      type: restic
