--- a/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
@@ -87,15 +87,17 @@ spec:
         persistence:
             config:
                 enabled: true
-                mountPath: /config
-                volsync:
-                - name: config
-                  type: restic
-                  credentials: s3
-                  dest:
+                main:
                     enabled: true
-                  src:
-                    enabled: true
+                    mountPath: /config
+                    volsync:
+                    - name: config
+                      type: restic
+                      credentials: s3
+                      dest:
+                        enabled: true
+                      src:
+                        enabled: true
             media:
                 enabled: true
                 type: nfs
