--- a/clusters/main/kubernetes/apps/media/sonarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/sonarr/app/helm-release.yaml
@@ -97,8 +97,8 @@ spec:
         persistence:
             config:
                 enabled: true
-                readOnly: false
                 main:
+                    enabled: true
                     mountPath: /config
                     volsync:
                      - name: config
