--- a/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
@@ -16,23 +16,7 @@ spec:
         namespace: flux-system
       interval: 15m
   timeout: 20m
-  maxHistory: 3
-  driftDetection:
-    mode: warn
-  install:
-    createNamespace: true
-    strategy:
-      type: Recreate
-    remediation:
-      retries: 3
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
-    strategy:
-      type: Recreate
-  uninstall:
-    keepHistory: false
+  releaseName: tandoor-recipes
   values:
     credentials:
       s3:
