--- a/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: tandoor-recipes
-  namespace: tandoor-recipes
+  namespace: home
 spec:
   interval: 15m
   chart:
