--- a/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
@@ -37,15 +37,17 @@ spec:
     persistence:
       config:
         enabled: true
-        mountPath: /config
-        volsync:
-        - name: config
-          type: restic
-          credentials: s3
-          dest:
-            enabled: true
-          src:
-            enabled: true
+        main:
+          enabled: true
+          mountPath: /config
+          volsync:
+          - name: config
+            type: restic
+            credentials: s3
+            dest:
+              enabled: true
+            src:
+              enabled: true
       media:
         enabled: true
         mountPath: /opt/recipes/mediafiles
