--- a/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
@@ -65,10 +65,10 @@ spec:
     service:
       main:
         enabled: true
-        loadBalancerIP: ${TANDOOR_IP}
+        loadBalancerIP: 192.168.10.
         ports:
           port: 10029
-          targetPort: 5798
+          targetPort: 10029
         type: LoadBalancer
     ingress:
       main:
