--- a/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
@@ -65,10 +65,7 @@ spec:
     service:
       main:
         enabled: true
-        loadBalancerIP: 192.168.10.
-        ports:
-          port: 10029
-          targetPort: 10029
+        loadBalancerIP: ${TANDOOR_IP}
         type: LoadBalancer
     ingress:
       main:
