--- a/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
@@ -65,7 +65,11 @@ spec:
     service:
       main:
         enabled: true
-        loadBalancerIP: ${TANDOOR_IP}
+        loadBalancerIP: ${T_IP}
+        ports:
+          enabled: true
+          port: 10029
+          targetPort: 10029
         type: LoadBalancer
     ingress:
       main:
